apps/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: ghcr.io/dan9191/infra/keycloak:64141e6c6a3fbb133914341b0710adaaa8076754
          args:
            - start
            - --http-enabled=true
            - --hostname-strict=false
          ports:
            - containerPort: 8080
